--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
   },
   "dependencies": {
     "cypress": "^10.0.3",
+    "fs": "^0.0.1-security",
+    "net": "^1.0.2",
     "next": "^12.1.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "styled-components": "^5.3.6",
-    "twilio": "^3.84.0"
+    "tls": "^0.0.1",
+    "twilio": "^3.84.0",
+    "twilio-client": "^1.14.0"
   },
   "devDependencies": {
     "eslint": "^8.30.0",
